# conmind

./: Cargo.toml  LICENSE  README.md  README_ru.md  build.rs  config.toml
src/: audio.rs  main.rs  render.rs  render_context.rs
src/presets/: glitch_barocco.wgsl
