[package]
name = "conmind"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
cpal = "0.17.3"
pollster = "0.4.0"
realfft = "3.5.0"
wgpu = { version = "29.0.1", features = ["custom"] }
winit = "0.30.13"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
colored = "3.1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell"
] }
libc = "0.2.183"
